--- a/entries/entry1/asset/entry1.css
+++ b/entries/entry1/asset/entry1.css
@@ -22,29 +22,53 @@ line-height: 100px;
 text-align: center;
 color: #002CCB;
 transition: transform 0.5s linear;
-animation: slide-in 3s ease-in-out;
+animation: shine 6s linear;
 text-decoration: none;
 }
 
-@keyframes slide-in {
+@keyframes shine {
     0% {
-      transform: translatey(0%);
+      opacity: 0%;
     }
   
-    25% {
-      transform: translatey(100%);
+    10% {
+      opacity: 100%;
     }
     
+    20% {
+      opacity: 0%;
+    }
+    
+    30% {
+      opacity: 100%;
+    }
+
+    40% {
+      opacity: 0%;
+    }
+
     50% {
-      transform: translatey(-100%);
+      opacity: 100%;
+    }
+  
+    60% {
+      opacity: 0%;
     }
     
-    75% {
-      transform: translatey(25%);
+    70% {
+      opacity: 100%;
+    }
+    
+    80% {
+      opacity: 0%;
+    }
+
+    90% {
+      opacity: 100%;
     }
 
     100% {
-      transform: translatey(0%);
+      opacity: 0%;
     }
 
 
