--- a/entries/entry1/asset/entry1.css
+++ b/entries/entry1/asset/entry1.css
@@ -8,79 +8,44 @@ body{
   overflow: hidden; 
 }
 
-.Start{
-position: absolute;
-width: 626px;
-height: 225px;
-left: 407px;
-top: 399px;
-font-family: 'Roboto Mono';
+
+.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.container img{
+  width: 300px;
+  height: auto;
+}
+.container img:nth-child(1):hover {
+  transform: scale(1.2); 
+}
+
+.container2{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 214px;
+  font-family: 'Roboto Mono';
 font-style: normal;
-font-weight: 400;
-font-size: 40px;
+font-weight: 300;
+font-size: 30px;
 line-height: 100px;
 text-align: center;
 color: #002CCB;
-transition: transform 0.5s linear;
-animation: shine 6s linear;
-text-decoration: none;
+
 }
 
-@keyframes shine {
-    0% {
-      opacity: 0%;
-    }
-  
-    10% {
-      opacity: 100%;
-    }
-    
-    20% {
-      opacity: 0%;
-    }
-    
-    30% {
-      opacity: 100%;
-    }
-
-    40% {
-      opacity: 0%;
-    }
-
-    50% {
-      opacity: 100%;
-    }
-  
-    60% {
-      opacity: 0%;
-    }
-    
-    70% {
-      opacity: 100%;
-    }
-    
-    80% {
-      opacity: 0%;
-    }
-
-    90% {
-      opacity: 100%;
-    }
-
-    100% {
-      opacity: 0%;
-    }
 
 
-  }
 
 
-  .Start:hover{
-    transform: scale(1.1);
-}
-.Start:active{
-  opacity: 50%;
-}
 
 
 
