--- a/asset/index.css
+++ b/asset/index.css
@@ -2,8 +2,8 @@
 body{
   margin: 0;
   padding: 0;
-  width: 1440px;
-  height: 1024px;
+  width: 100vw; 
+  height: 100vh;
   background-color: #ffffff;
   overflow: hidden; 
 }
