--- a/asset/index.css
+++ b/asset/index.css
@@ -1,11 +1,12 @@
 
 body{
-  margin: 0;
-  padding: 0;
-  width: 100vw; 
+  display: flex;
+  flex-direction: column; 
+  justify-content: center; 
+  align-items: center;
   height: 100vh;
   background-color: #ffffff;
-  overflow: hidden; 
+  
 }
 
 .Start{
