--- a/entries/entry3/asset/entry3.css
+++ b/entries/entry3/asset/entry3.css
@@ -1,10 +1,8 @@
 body{
-    margin: 0;
-    padding: 0;
-    width: 1440px;
-    height: 1024px;
-    background-color: #002CCB;
-    overflow: hidden; 
+    width: 100vw; 
+  height: 100vh;
+  background-color: #002CCB;
+  overflow: hidden; 
 }
 
 
@@ -16,8 +14,8 @@ body{
     top: 300px;
     font-family: 'Roboto Mono';
     font-style: normal;
-    font-weight: 400;
-    font-size: 36.5728px;
+    font-weight: 300;
+    font-size: 36px;
     line-height: 48px;
     text-align: center;
     color: #FFFFFF;
@@ -37,50 +35,40 @@ body{
     height: 68px;
     left: calc(50% - 964px/2);
     top: 350px;
-    
     font-family: 'Roboto Mono';
     font-style: normal;
-    font-weight: 400;
+    font-weight: 200;
     font-size: 36.5728px;
     line-height: 48px;
     text-align: center;
     color: #FFFFFF;
-    animation: start2 3s linear forwards;
 }
-
-@keyframes start2{
-    0%{ opacity:0%;}
-    20%{ opacity:0%;}
-    100%{opacity:100%;}
- }
 
 
 .E{
-    position: absolute;
-    width: 1801px;
-    height: 244px;
-    left: calc(50% - 1801px/2 - 0.5px);
-    top: -300px;
+    margin-top: 100px;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    height: 100vh;
+    top: 700px; 
+}
+.link {
+    text-decoration: none;
     font-family: 'Oxanium';
     font-style: normal;
     font-weight: 700;
-    font-size: 250px;
-    line-height: 312px;
-    text-align: center;
-    color: #FFFFFF;
-    animation: start3 2s linear forwards;
-    transition: transform 1s linear;
-}
+    font-size: 200px;
+    line-height: 100px;
+    margin-top: 30%;
+    color: #FFFFFF; 
+  }
 
-.E:hover{
-    transform:scale(1.3);
+.link:hover{
+    transform:scale(1.2);
  }
 
-@keyframes start3{
-    0%{ transform: translatey(0);}
-    80%{ transform: translatey(0);}
-    100%{transform:translatey(890px);}
- }
+
  
 
  
