--- a/entries/entry2/asset/entry2.css
+++ b/entries/entry2/asset/entry2.css
@@ -30,14 +30,14 @@ color: #557aff;
     display: flex;
     justify-content: center; 
     height: 30%; 
-    transform: translate(0, 500px);
+    transform: translate(-12px, 600px);
     object-fit: cover;
   
   }
   .notear img{
     animation:shine 5s infinite ;
   }
-  
+
 @keyframes shine{
   0%{opacity: 100%;}
   25%{opacity: 30%;}
