--- a/entries/entry4/asset/entry4.css
+++ b/entries/entry4/asset/entry4.css
@@ -1,10 +1,8 @@
 body{
-    margin: 0;
-    padding: 0;
-    width: 1440px;
-    height: 1024px;
-    background-color: #ffffff;
+    width: 100vw; 
+    height: 100vh;
     overflow: hidden; 
+    background-color: #ffffff;
 }
 
 
@@ -20,6 +18,7 @@ font-weight: 400;
 font-size: 30px;
 line-height: 48px;
 text-align: center;
+text-decoration: none;
 
 color: #002CCB;
 }
