--- a/entries/entry8/asset/entry8.css
+++ b/entries/entry8/asset/entry8.css
@@ -1,5 +1,10 @@
 
-
+body{
+    width: 100vw; 
+    height: 100vh;
+    background-color:  #ffffff;
+    overflow: hidden; 
+}
 
 .textnormal{
 position: absolute;
