--- a/entries/entry9/asset/entry9.css
+++ b/entries/entry9/asset/entry9.css
@@ -1,4 +1,15 @@
 
+body{
+    width: 100vw; 
+    height: 100vh;
+    background-color:  #002CCB;
+    overflow: hidden; 
+}
+
+.container{
+transform: scale(1.3);
+}
+
 
 
 .textnormal{
@@ -12,7 +23,7 @@ font-style: normal;
 font-weight: 600;
 font-size: 262.586px;
 line-height: 328px;
-color: #002CCB;
+color: #ffffff;
 }
 
 
@@ -30,7 +41,7 @@ font-style: normal;
 font-weight: 600;
 font-size: 262.586px;
 line-height: 328px;
-color: #002CCB;
+color: #ffffff;
 }
 
 .textnormal2{
@@ -46,7 +57,7 @@ font-size: 262.586px;
 line-height: 328px;
 display: flex;
 align-items: center;
-color: #002CCB;
+color: #ffffff;
 }
 
 .textreflected2 {
@@ -63,7 +74,8 @@ color: #002CCB;
     font-weight: 600;
     font-size: 262.586px;
     line-height: 328px;
-    color: #002CCB;
+    color: #ffffff;
+    vertical-align: baseline;
     }
 
     .O{
@@ -105,7 +117,7 @@ color: #002CCB;
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 10%;
+        width: 12%;
         animation:shine 2s infinite ;
     }
         @keyframes shine{
