--- a/entries/entry7/asset/entry7.css
+++ b/entries/entry7/asset/entry7.css
@@ -1,7 +1,7 @@
 body {
     background-color: white;
     height: 100vh;
-    margin: 0;
+    width: 100vh;
     overflow: hidden;
     position: relative;
     display: flex;
