--- a/entries/entry8/asset/entry8.css
+++ b/entries/entry8/asset/entry8.css
@@ -2,116 +2,74 @@
 body{
     width: 100vw; 
     height: 100vh;
-    background-color:  #ffffff;
+    background-color: #002CCB;
     overflow: hidden; 
 }
 
+.container{
+text-align: center;
+}
+
+
+
 .textnormal{
-position: absolute;
-width: 458.87px;
-height: 412.92px;
-left: 450px;
-top: 254.6px;
-font-family: 'Oxanium';
-font-style: normal;
-font-weight: 600;
-font-size: 262.586px;
-line-height: 328px;
-color: #002CCB;
-}
-
-
-.textreflected {
-transform: scaleX(-1);
-transform: scaley(-1);
-display: inline-block; 
-position: absolute;
-width: 458.87px;
-height: 412.92px;
-left: 450px;
-top: 350px;
-font-family: 'Oxanium';
-font-style: normal;
-font-weight: 600;
-font-size: 262.586px;
-line-height: 328px;
-color: #002CCB;
-}
-
-.textnormal2{
-position: absolute;
-width: 758.87px;
-height: 345.96px;
-left: 1008.13px;
-top: 254.6px;
-font-family: 'Oxanium';
-font-style: normal;
-font-weight: 600;
-font-size: 262.586px;
-line-height: 328px;
-display: flex;
-align-items: center;
-color: #002CCB;
-}
-
-.textreflected2 {
-    transform: scaleX(-1);
-    transform: scaley(-1);
-    display: inline-block; 
     position: absolute;
-    width: 758.87px;
-    height: 412.92px;
-    left: 1008.13px;
-    top: 350px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -80%); 
+    color: #002CCB;
     font-family: 'Oxanium';
     font-style: normal;
     font-weight: 600;
-    font-size: 262.586px;
-    line-height: 328px;
-    color: #002CCB;
+    font-size: 50vw;
+    line-height: 7vw;
+    -webkit-box-reflect: below 0vw;
     }
+    
+
+    
+
 
     .O{
         font-weight: 600;
-        font-size: 262.586px;
+        font-size:13.944vw;
     }
 
     .o2{
         font-weight: 600;
-        font-size: 230px;
+        font-size: 13.5vw;
     }
 
     .h{
         font-weight: 600;
-       font-size: 150px;
+       font-size: 11vw;
     }
 
     .l{
         font-weight: 600;
-        font-size: 240px;
+        font-size: 13.7vw;
     }
 
     .i{
         font-weight: 600;
-        font-size: 210px;
+        font-size: 13.4vw;
     }
 
     .h2{
         font-weight: 600;
-        font-size: 170px;
+        font-size: 12vw;
     }
 
     .c{
        font-weight: 600;
-       font-size: 150px;
+       font-size: 11vw;
     }
 
     .mouthclose{
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 10%;
-        animation:shine 2s infinite ;
+            width: 10vw;
+            height: auto;
+            animation: shine 2s infinite;
+            cursor: pointer;
     }
         @keyframes shine{
             0%{opacity: 100%;}
@@ -119,12 +77,11 @@ color: #002CCB;
             50%{opacity: 100%;}
             75%{opacity: 10%;}
           }
-   
-
-
     .mouthclose:hover{
         transform: scale(1.2);
         animation-play-state:paused; 
     }
+
+ 
 
   
