--- a/entries/entry5/asset/entry5.css
+++ b/entries/entry5/asset/entry5.css
@@ -25,7 +25,7 @@ body{
 .w{    position: absolute;
     right: 25%;
     left: 25%;
-    top: 40%;
+    top: 30%;
     bottom: 25%;
     font-family: 'Roboto Mono';
     font-style: normal;
@@ -38,7 +38,7 @@ body{
 .e{ position: absolute;
     right: 25%;
     left: 25%;
-    top: 55%;
+    top: 45%;
     bottom: 25%;
     font-family:'Oxanium';
     font-style: normal;
@@ -52,13 +52,13 @@ body{
 
   .x{
     font-weight: 500;
-    font-size: 120px;
+    font-size: 7vw;
   }
 
 
   .c{
     font-weight: 1000;
-    font-size: 180px;
+    font-size: 9vw;
   }
 
   .e:hover{
