--- a/entries/entry7/asset/entry7.css
+++ b/entries/entry7/asset/entry7.css
@@ -1,12 +1,10 @@
 body {
-    background-color: white;
-    height: 100vh;
-    width: 100vh;
-    overflow: hidden;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    
+        width: 100vw; 
+        height: 100vh;
+        background-color:  #ffffff;
+        overflow: hidden; 
+    
 }
 
 .random-link {
