--- a/entries/entry12/asset/entry12.css
+++ b/entries/entry12/asset/entry12.css
@@ -8,39 +8,19 @@ body{
 }
 
 .main{
-    position: absolute;
-    top:50%;
-    right:50%;
-    translate: (-50%,-50%);
-
-}
-
-
-.home{
-    position: absolute;
-    bottom: 1.8vw;
-    right: -30vw;
     text-decoration: none;
     color: white;
 
 }
 
 .hits{
-
+    opacity: 0;
 }
 
 .hits:hover{
-    animation:hits 1s linear infinite;
+    opacity: 1;
 }
 
-@keyframes hits{
-    0%{
-        translate:0vw;
-    }
-    100%{
-        translate:6.5vw;
-    }
-}
 
 .tear2{
     display: inline-block;
